tests/cases/compiler-development/artifact/errors/diagnostic-match-no-payload.diagnostic
diagnostic error code=T0001 family=type message="enum case 'A' has no payload" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-no-payload.ari" display="tests/cases/match/errors/match-no-payload.ari" bytes=162
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-no-payload.ari" line=9 column=5 end_line=9 end_column=6 byte_start=88 byte_end=89 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-no-payload.ari:9:5\n   |\n 9 |     A(_) => {\n   |     ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/match/errors/match-no-payload.ari" line=2 column=3 end_line=2 end_column=4 byte_start=16 byte_end=17 message="enum case 'A' is declared without payload"
  Snippet label=1 text="  --> tests/cases/match/errors/match-no-payload.ari:2:3\n   |\n 2 |   A,\n   |   ^"
  Note index=0 location=none message="unit enum cases are matched without payload parentheses"
  Help index=0 location=none message="remove the payload pattern from 'A'"
